--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "format": "yarn prettier --write .",
+    "format-check": "yarn prettier --check ."
   },
   "dependencies": {
     "@prisma/client": "^5.1.1",
