--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
+    "test": "jest",
     "lint": "next lint",
     "start": "next start",
     "format": "yarn prettier --write .",
@@ -19,6 +20,7 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "jest": "^29.7.0",
     "next": "^13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -39,6 +41,5 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.20.2"
-  },
-  "packageManager": "npm@9.6.4"
+  }
 }
