--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "format-check": "yarn prettier --check ."
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.32.6",
@@ -20,6 +23,7 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "framer-motion": "^10.16.4",
     "jest": "^29.7.0",
     "next": "^13.4.19",
     "react": "18.2.0",
