--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.19",
+    "prettier": "^3.0.3",
     "prisma": "^5.1.1",
     "typescript": "^5.1.6"
   },
