--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^10.16.4",
     "jest": "^29.7.0",
     "next": "^13.4.19",
+    "openai": "^4.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
