--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "10.12.6",
     "next": "^13.4.19",
     "openai": "^4.10.0",
     "react": "18.2.0",
