--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,8 @@ POSTGRES_POOL_URL=
 OPENAI_API_KEY=
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+#POSTGRES_URL="postgresql://nikkihu@localhost:5222/herehealthdb"
+#POSTGRES_URL="postgres://default:X1NTqdVrZ8Kh@ep-withered-snow-a4772ew8.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+#POSTGRES_POOL_URL="postgresql://nikkihu@localhost:5222/herehealthdb"
+#POSTGRES_POOL_URL="postgres://default:X1NTqdVrZ8Kh@ep-withered-snow-a4772ew8-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
